--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -13,9 +13,14 @@
     <div class="row">
       <div class="col">
         <h6>{{ instrucao }}</h6>
-        <p>{{ frases[0].fraseEng }}</p>
+        <p>{{ rodadaFrase.fraseEng }}</p>
+        <p>{{ resposta }}</p>
         <div class="form-group">
-          <textarea class="form-control" rows="3"></textarea>
+          <textarea
+            class="form-control"
+            rows="3"
+            (input)="atualizaResposta($event)"
+          ></textarea>
         </div>
       </div>
     </div>
@@ -23,7 +28,13 @@
     <div class="row">
       <div class="col">
         <div class="d-flex justify-content-end">
-          <button type="button" class="btn btn-primary">Verificar</button>
+          <button
+            type="button"
+            (click)="verificarResposta()"
+            class="btn btn-primary"
+          >
+            Verificar
+          </button>
         </div>
       </div>
     </div>
