--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <div class="row">
       <div class="col-sm-6">
-        <app-progresso></app-progresso>
+        <app-progresso [progresso]="progresso"></app-progresso>
       </div>
       <div class="col-sm-6">
         <div class="d-flex justify-content-end">
@@ -14,12 +14,12 @@
       <div class="col">
         <h6>{{ instrucao }}</h6>
         <p>{{ rodadaFrase.fraseEng }}</p>
-        <p>{{ resposta }}</p>
         <div class="form-group">
           <textarea
             class="form-control"
             rows="3"
             (input)="atualizaResposta($event)"
+            [value]="resposta"
           ></textarea>
         </div>
       </div>
