--- a/src/app/progresso/progresso.component.html
+++ b/src/app/progresso/progresso.component.html
@@ -1,3 +1,3 @@
 <div class="progress">
-  <div class="progress-bar" style.width="{{ progresso }}%"></div>
+  <div class="progress-bar" [style.width.%]="progresso"></div>
 </div>
