--- a/src/app/tentativas/tentativas.component.html
+++ b/src/app/tentativas/tentativas.component.html
@@ -1,3 +1,1 @@
-<img src="/assets/coracao_vazio.png">
-<img src="/assets/coracao_cheio.png">
-<img src="/assets/coracao_cheio.png">
+<img *ngFor="let coracao of coracoes" [src]="coracao.exibeCoracao()" />
