--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,27 +5,16 @@
 ></app-painel>
 
 <ng-template #fimDeJogo>
-  <div
-    *ngIf="tipoEncerramento === 'derrota'; else fimDeJogoVitoria"
-    class="container"
-    style="margin-top: 50px"
-  >
+  <div class="container" style="margin-top: 50px">
     <div class="row">
       <div class="col">
-        <h3 style="color: red">Fim de Joggo, infelizmente você perdeu! :(</h3>
+        <h3 [style.color]="conteudoDeEncerramento.color">
+          {{ conteudoDeEncerramento.mensagem }}
+        </h3>
+        <button class="btn btn-primary" (click)="reiniciarJogo()">
+          Jogar novamente
+        </button>
       </div>
     </div>
   </div>
-
-  <ng-template #fimDeJogoVitoria>
-    <div class="container" style="margin-top: 50px">
-      <div class="row">
-        <div class="col">
-          <h3 style="color: green">
-            Fim de Joggo, infelizmente você perdeu! :(
-          </h3>
-        </div>
-      </div>
-    </div>
-  </ng-template>
 </ng-template>
