--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-dark bg-inverse">
-  <h1 class="navbar-brand">Aprendendo Ingles</h1>
+  <h1 class="navbar-brand">Aprendendo Inglês</h1>
 </nav>
