--- a/_projetos/app2_passaroUrbano/src/app/home/home.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/home/home.component.html
@@ -8,7 +8,7 @@
 
   <hr />
 
-  <div class="row">
+  <div class="row mb-40">
     <div class="col-sm-4" *ngFor="let oferta of ofertas">
       <div class="card">
         <img class="card-img-top" [src]="oferta.imagens[0].url" />
