--- a/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.css
+++ b/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.css
@@ -1,23 +1,28 @@
 h1 {
-    color: #555
+  color: #555;
 }
 
 .oferta {
-    margin-top: 25px
+  margin-top: 25px;
 }
 
 .oferta img {
-    width: 372px;
-    height: 240px;
+  width: 372px;
+  height: 240px;
 }
 
 .thumbnails {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .thumbnails img {
-    width: 124px;
-    height: 80px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+  width: 124px;
+  height: 80px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.container {
+  padding: 25px;
+  padding-bottom: 60px;
 }
