--- a/_projetos/app2_passaroUrbano/src/app/restaurantes/restaurantes.component.css
+++ b/_projetos/app2_passaroUrbano/src/app/restaurantes/restaurantes.component.css
@@ -1,10 +1,9 @@
 img {
-    border-radius: 5px;
-    width: 320px;
-    height: 200px
+  border-radius: 5px;
+  width: 320px;
+  height: 200px;
 }
 
 .container {
-    padding-left: 25px;
-    padding-right: 25px;
+  padding: 25px;
 }
