--- a/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
@@ -40,4 +40,32 @@
       </div>
     </div>
   </div>
+
+  <div class="row" style="margin-top: 25px; margin-bottom: 150px">
+    <div class="col">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            routerLink="como-usar"
+            data-toggle="tab"
+            role="tab"
+            aria-expanded="true"
+            >Como usar</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            routerLink="onde-fica"
+            data-toggle="tab"
+            role="tab"
+            >Onde fica?</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
