feat: Renderiza componente a partir do router outlet

--- a/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
@@ -66,6 +66,9 @@
           >
         </li>
       </ul>
+      <div class="tab-content">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
