fix: Marca a tab default

--- a/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
@@ -46,7 +46,7 @@
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item">
           <a
-            class="nav-link"
+            class="nav-link active"
             routerLinkActive="active"
             routerLink="como-usar"
             data-toggle="tab"
