--- a/_projetos/app2_passaroUrbano/src/app/topo/topo.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/topo/topo.component.html
@@ -13,8 +13,8 @@
           placeholder="Pesquise por ofertas"
         />
         <ul class="list-group" style="position: absolute">
-          <li class="list-group-item" *ngFor="let oferta of ofertasPesquisa">
-            {{ oferta.titulo }}
+          <li class="list-group-item" *ngFor="let oferta of ofertas | async">
+            {{ oferta.titulo | descricaoReduzida: 0:15 }}
           </li>
         </ul>
       </div>
