--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -1,13 +1,19 @@
 <div class="container">
   <div class="ordem-compra">
-    <form>
-    
+    <form novalidate>
       <h5>Sua Compra</h5>
       <hr />
 
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+      <div
+        class="form-row"
+        style="
+          background: #fafafa;
+          padding: 20px;
+          border-bottom: solid 1px #f0f0f0;
+        "
+      >
         <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
+          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid" />
         </div>
         <div class="form-group col-sm-6">
           Super Burger
@@ -25,14 +31,19 @@
           </div>
         </div>
 
-        <div class="form-group col-sm-3 d-flex justify-content-end">
-          29.90
-        </div>
+        <div class="form-group col-sm-3 d-flex justify-content-end">29.90</div>
       </div>
-      
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+
+      <div
+        class="form-row"
+        style="
+          background: #fafafa;
+          padding: 20px;
+          border-bottom: solid 1px #f0f0f0;
+        "
+      >
         <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
+          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid" />
         </div>
         <div class="form-group col-sm-6">
           Estância das águas
@@ -50,11 +61,9 @@
           </div>
         </div>
 
-        <div class="form-group col-sm-3 d-flex justify-content-end">
-          31.90
-        </div>
+        <div class="form-group col-sm-3 d-flex justify-content-end">31.90</div>
       </div>
-      
+
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
@@ -62,27 +71,56 @@
       </div>
       <br />
 
-
       <h5>Dados de entrega</h5>
       <hr />
 
       <div class="form-row">
-
         <div class="form-group col-md-6">
-          <input type="text" class="form-control is-invalid" placeholder="Endereço" autocomplete="off" minlength="5" required>
+          <input
+            #inputEndereco
+            type="text"
+            class="form-control {{
+              enderecoValido ? 'is-valid' : 'is-invalid'
+            }}"
+            placeholder="Endereço"
+            autocomplete="off"
+            minlength="5"
+            required
+            [value]="endereco"
+            (input)="atualizaEndereco(inputEndereco.value)"
+          />
           <div class="invalid-feedback">Endereço inválido</div>
         </div>
 
         <div class="form-group col-md-2">
-          <input type="text" class="form-control is-valid" placeholder="Número" autocomplete="off" minlength="1" required>
+          <input
+            #inputNumero
+            type="text"
+            class="form-control {{ numeroValido ? 'is-valid' : 'is-invalid' }}"
+            placeholder="Número"
+            autocomplete="off"
+            minlength="1"
+            required
+            [value]="numero"
+            (input)="atualizaNumero(inputNumero.value)"
+          />
           <br />
           <small class="form-text text-muted">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input type="text" class="form-control" placeholder="Complemento" autocomplete="off">
+          <input
+            #inputComplemento
+            type="text"
+            class="form-control {{
+              complementoValido ? 'is-valid' : 'is-invalid'
+            }}"
+            placeholder="Complemento"
+            autocomplete="off"
+            [value]="complemento"
+            (input)="atualizaComplemento(inputComplemento.value)"
+          />
         </div>
-
       </div>
       <br />
 
@@ -90,12 +128,25 @@
       <hr />
 
       <div class="form-row">
-          
         <div class="form-group col-md-3">
-          <select class="form-control is-invalid">
-            <option>Selecione uma opção</option>
-            <option>Dinheiro</option>
-            <option>Débito</option>
+          <select
+            class="form-control {{
+              formaPagamentoValido ? 'is-valid' : 'is-invalid'
+            }}"
+            #selectFormPagamento
+            [value]="formaPagamento"
+            (change)="atualizaFormaPagamento(selectFormPagamento.value)"
+          >
+            <option value="">Selecione uma opção</option>
+            <option
+              value="dinheiro"
+              selected="{{ formaPagamento == 'dinheiro' }}"
+            >
+              Dinheiro
+            </option>
+            <option value="debito" selected="{{ formaPagamento == 'debito' }}">
+              Débito
+            </option>
           </select>
 
           <div class="invalid-feedback">Selecione uma forma de pagamento</div>
@@ -103,7 +154,9 @@
       </div>
 
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
+      <button type="submit" class="btn btn-primary btn-lg">
+        Cofirmar compra
+      </button>
     </form>
   </div>
 </div>
