--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -80,7 +80,11 @@
             #inputEndereco
             type="text"
             class="form-control {{
-              enderecoValido ? 'is-valid' : 'is-invalid'
+              enderecoEstadoPrimitivo
+                ? ''
+                : enderecoValido
+                ? 'is-valid'
+                : 'is-invalid'
             }}"
             placeholder="Endereço"
             autocomplete="off"
@@ -96,7 +100,13 @@
           <input
             #inputNumero
             type="text"
-            class="form-control {{ numeroValido ? 'is-valid' : 'is-invalid' }}"
+            class="form-control {{
+              numeroEstadoPrimitivo
+                ? ''
+                : numeroValido
+                ? 'is-valid'
+                : 'is-invalid'
+            }}"
             placeholder="Número"
             autocomplete="off"
             minlength="1"
@@ -113,7 +123,11 @@
             #inputComplemento
             type="text"
             class="form-control {{
-              complementoValido ? 'is-valid' : 'is-invalid'
+              complementoEstadoPrimitivo
+                ? ''
+                : complementoValido
+                ? 'is-valid'
+                : 'is-invalid'
             }}"
             placeholder="Complemento"
             autocomplete="off"
@@ -131,13 +145,17 @@
         <div class="form-group col-md-3">
           <select
             class="form-control {{
-              formaPagamentoValido ? 'is-valid' : 'is-invalid'
+              formaPagamentoEstadoPrimitivo
+                ? ''
+                : formaPagamentoValido
+                ? 'is-valid'
+                : 'is-invalid'
             }}"
             #selectFormPagamento
             [value]="formaPagamento"
             (change)="atualizaFormaPagamento(selectFormPagamento.value)"
           >
-            <option value="">Selecione uma opção</option>
+            <option disabled selected="true">Selecione uma opção</option>
             <option
               value="dinheiro"
               selected="{{ formaPagamento == 'dinheiro' }}"
