--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -93,7 +93,14 @@
             [value]="endereco"
             (input)="atualizaEndereco(inputEndereco.value)"
           />
-          <div class="invalid-feedback">Endereço inválido</div>
+          <div *ngIf="enderecoEstadoPrimitivo == false">
+            <div *ngIf="enderecoValido; else msgEnderecoInValido">
+              <small class="form-text text-successo">Ok</small>
+            </div>
+            <ng-template #msgEnderecoInValido>
+              <small class="form-text text-danger">Endereço inválido</small>
+            </ng-template>
+          </div>
         </div>
 
         <div class="form-group col-md-2">
@@ -115,7 +122,14 @@
             (input)="atualizaNumero(inputNumero.value)"
           />
           <br />
-          <small class="form-text text-muted">Ok</small>
+          <div *ngIf="numeroEstadoPrimitivo == false">
+            <div *ngIf="numeroValido; else msgnumeroInValido">
+              <small class="form-text text-successo">Ok</small>
+            </div>
+            <ng-template #msgnumeroInValido>
+              <small class="form-text text-danger">Número inválido</small>
+            </ng-template>
+          </div>
         </div>
 
         <div class="form-group col-md-4">
@@ -134,6 +148,14 @@
             [value]="complemento"
             (input)="atualizaComplemento(inputComplemento.value)"
           />
+          <div *ngIf="complementoEstadoPrimitivo == false">
+            <div *ngIf="complementoValido; else msgcomplementoInValido">
+              <small class="form-text text-successo">Ok</small>
+            </div>
+            <ng-template #msgcomplementoInValido>
+              <small class="form-text text-danger">Complemento inválido</small>
+            </ng-template>
+          </div>
         </div>
       </div>
       <br />
@@ -155,25 +177,36 @@
             [value]="formaPagamento"
             (change)="atualizaFormaPagamento(selectFormPagamento.value)"
           >
-            <option disabled selected="true">Selecione uma opção</option>
+            <option selected value="">Selecione uma opção</option>
             <option
               value="dinheiro"
-              selected="{{ formaPagamento == 'dinheiro' }}"
+              selected="{{ formaPagamento == 'dinheiro' ? 'selected' : '' }}"
             >
               Dinheiro
             </option>
-            <option value="debito" selected="{{ formaPagamento == 'debito' }}">
+            <option
+              value="debito"
+              selected="{{ formaPagamento === 'debito' ? 'selected' : '' }}"
+            >
               Débito
             </option>
           </select>
-
-          <div class="invalid-feedback">Selecione uma forma de pagamento</div>
+        </div>
+        <div *ngIf="formaPagamentoEstadoPrimitivo == false">
+          <div *ngIf="formaPagamentoValido; else msgformaPagamentoInValido">
+            <small class="form-text text-successo">Ok</small>
+          </div>
+          <ng-template #msgformaPagamentoInValido>
+            <small class="form-text text-danger"
+              >Forma de Pagamento inválido</small
+            >
+          </ng-template>
         </div>
       </div>
 
       <hr />
       <button type="submit" class="btn btn-primary btn-lg">
-        Cofirmar compra
+        Confirmar compra
       </button>
     </form>
   </div>
