--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -205,7 +205,11 @@
       </div>
 
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg">
+      <button
+        type="submit"
+        [disabled]="formEstado"
+        class="btn btn-primary btn-lg"
+      >
         Confirmar compra
       </button>
     </form>
