--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -1,19 +1,13 @@
 <div class="container">
-  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
+  <div class="ordem-compra">
     <form novalidate>
+    
       <h5>Sua Compra</h5>
       <hr />
 
-      <div
-        class="form-row"
-        style="
-          background: #fafafa;
-          padding: 20px;
-          border-bottom: solid 1px #f0f0f0;
-        "
-      >
+      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid" />
+          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
         </div>
         <div class="form-group col-sm-6">
           Super Burger
@@ -31,19 +25,14 @@
           </div>
         </div>
 
-        <div class="form-group col-sm-3 d-flex justify-content-end">29.90</div>
+        <div class="form-group col-sm-3 d-flex justify-content-end">
+          29.90
+        </div>
       </div>
-
-      <div
-        class="form-row"
-        style="
-          background: #fafafa;
-          padding: 20px;
-          border-bottom: solid 1px #f0f0f0;
-        "
-      >
+      
+      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
         <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid" />
+          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
         </div>
         <div class="form-group col-sm-6">
           Estância das águas
@@ -61,9 +50,11 @@
           </div>
         </div>
 
-        <div class="form-group col-sm-3 d-flex justify-content-end">31.90</div>
+        <div class="form-group col-sm-3 d-flex justify-content-end">
+          31.90
+        </div>
       </div>
-
+      
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
@@ -71,92 +62,45 @@
       </div>
       <br />
 
+
       <h5>Dados de entrega</h5>
       <hr />
 
       <div class="form-row">
+
         <div class="form-group col-md-6">
-          <input
-            #inputEndereco
-            type="text"
-            class="form-control {{
-              enderecoEstadoPrimitivo
-                ? ''
-                : enderecoValido
-                ? 'is-valid'
-                : 'is-invalid'
-            }}"
-            placeholder="Endereço"
-            autocomplete="off"
-            minlength="5"
+          <input 
+            type="text" 
+            class="form-control is-invalid" 
+            placeholder="Endereço" 
+            autocomplete="off" 
+            minlength="5" 
             required
-            [value]="endereco"
-            (input)="atualizaEndereco(inputEndereco.value)"
-          />
-          <div *ngIf="enderecoEstadoPrimitivo == false">
-            <div *ngIf="enderecoValido; else msgEnderecoInValido">
-              <small class="form-text text-successo">Ok</small>
-            </div>
-            <ng-template #msgEnderecoInValido>
-              <small class="form-text text-danger">Endereço inválido</small>
-            </ng-template>
-          </div>
+          >
+          <small class="form-text text-danger">Endereço inválido</small>
         </div>
 
         <div class="form-group col-md-2">
-          <input
-            #inputNumero
-            type="text"
-            class="form-control {{
-              numeroEstadoPrimitivo
-                ? ''
-                : numeroValido
-                ? 'is-valid'
-                : 'is-invalid'
-            }}"
-            placeholder="Número"
-            autocomplete="off"
+          <input 
+            type="text" 
+            class="form-control is-valid" 
+            placeholder="Número" 
+            autocomplete="off" 
             minlength="1"
             required
-            [value]="numero"
-            (input)="atualizaNumero(inputNumero.value)"
-          />
-          <br />
-          <div *ngIf="numeroEstadoPrimitivo == false">
-            <div *ngIf="numeroValido; else msgnumeroInValido">
-              <small class="form-text text-successo">Ok</small>
-            </div>
-            <ng-template #msgnumeroInValido>
-              <small class="form-text text-danger">Número inválido</small>
-            </ng-template>
-          </div>
+          >
+          <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
-          <input
-            #inputComplemento
-            type="text"
-            class="form-control {{
-              complementoEstadoPrimitivo
-                ? ''
-                : complementoValido
-                ? 'is-valid'
-                : 'is-invalid'
-            }}"
-            placeholder="Complemento"
+          <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Complemento" 
             autocomplete="off"
-            [value]="complemento"
-            (input)="atualizaComplemento(inputComplemento.value)"
-          />
-          <div *ngIf="complementoEstadoPrimitivo == false">
-            <div *ngIf="complementoValido; else msgcomplementoInValido">
-              <small class="form-text text-successo">Ok</small>
-            </div>
-            <ng-template #msgcomplementoInValido>
-              <small class="form-text text-danger">Complemento inválido</small>
-            </ng-template>
-          </div>
+          >
         </div>
+
       </div>
       <br />
 
@@ -164,61 +108,24 @@
       <hr />
 
       <div class="form-row">
+          
         <div class="form-group col-md-3">
-          <select
-            class="form-control {{
-              formaPagamentoEstadoPrimitivo
-                ? ''
-                : formaPagamentoValido
-                ? 'is-valid'
-                : 'is-invalid'
-            }}"
-            #selectFormPagamento
-            [value]="formaPagamento"
-            (change)="atualizaFormaPagamento(selectFormPagamento.value)"
+          <select 
+            class="form-control is-invalid"
           >
-            <option selected value="">Selecione uma opção</option>
-            <option
-              value="dinheiro"
-              selected="{{ formaPagamento == 'dinheiro' ? 'selected' : '' }}"
-            >
-              Dinheiro
-            </option>
-            <option
-              value="debito"
-              selected="{{ formaPagamento === 'debito' ? 'selected' : '' }}"
-            >
-              Débito
-            </option>
+            <option value="">Selecione uma opção</option>
+            <option value="dinheiro">Dinheiro</option>
+            <option value="debito">Débito</option>
           </select>
-        </div>
-        <div *ngIf="formaPagamentoEstadoPrimitivo == false">
-          <div *ngIf="formaPagamentoValido; else msgformaPagamentoInValido">
-            <small class="form-text text-successo">Ok</small>
-          </div>
-          <ng-template #msgformaPagamentoInValido>
-            <small class="form-text text-danger"
-              >Forma de Pagamento inválido</small
-            >
-          </ng-template>
+          <small class="form-text text-danger">Forma de pagamento inválida</small>
         </div>
       </div>
 
       <hr />
-      <button
-        type="button"
-        [disabled]="formEstado"
+      <button 
+        type="button" 
         class="btn btn-primary btn-lg"
-        (click)="confirmarCompra()"
-      >
-        Confirmar compra
-      </button>
+      >Cofirmar compra</button>
     </form>
-  </div>
-
-  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
-    <app-ordem-compra-sucesso
-      [idPedidoCompra]="idPedidoCompra"
-    ></app-ordem-compra-sucesso>
   </div>
 </div>
