feat: Adiciona mensagem de feedback para os campos especificos

--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.css
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.css
@@ -2,3 +2,13 @@
   margin-top: 50px;
   margin-bottom: 100px;
 }
+
+input.ng-invalid.ng-touched,
+select.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+
+input.ng-valid.ng-touched,
+select.ng-valid.ng-touched {
+  border: 1px solid green;
+}
