--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -1,13 +1,19 @@
 <div class="container">
   <div class="ordem-compra">
-    <form novalidate>
-    
+    <form novalidate #formulario="ngForm" (ngSubmit)="confirmarCompra()">
       <h5>Sua Compra</h5>
       <hr />
 
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+      <div
+        class="form-row"
+        style="
+          background: #fafafa;
+          padding: 20px;
+          border-bottom: solid 1px #f0f0f0;
+        "
+      >
         <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
+          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid" />
         </div>
         <div class="form-group col-sm-6">
           Super Burger
@@ -25,14 +31,19 @@
           </div>
         </div>
 
-        <div class="form-group col-sm-3 d-flex justify-content-end">
-          29.90
-        </div>
+        <div class="form-group col-sm-3 d-flex justify-content-end">29.90</div>
       </div>
-      
-      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+
+      <div
+        class="form-row"
+        style="
+          background: #fafafa;
+          padding: 20px;
+          border-bottom: solid 1px #f0f0f0;
+        "
+      >
         <div class="form-group col-sm-1">
-          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
+          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid" />
         </div>
         <div class="form-group col-sm-6">
           Estância das águas
@@ -50,11 +61,9 @@
           </div>
         </div>
 
-        <div class="form-group col-sm-3 d-flex justify-content-end">
-          31.90
-        </div>
+        <div class="form-group col-sm-3 d-flex justify-content-end">31.90</div>
       </div>
-      
+
       <div class="form-row">
         <div class="form-group col d-flex justify-content-end">
           <h4>Total do pedido: 61.80</h4>
@@ -62,45 +71,69 @@
       </div>
       <br />
 
+      <!-- <pre>{{ formulario.value | json }}</pre>
+      <pre>valido = {{ formulario.valid | json }}</pre>
+      <pre>invalido = {{ formulario.invalid | json }}</pre> -->
 
       <h5>Dados de entrega</h5>
       <hr />
 
       <div class="form-row">
-
         <div class="form-group col-md-6">
-          <input 
-            type="text" 
-            class="form-control is-invalid" 
-            placeholder="Endereço" 
-            autocomplete="off" 
-            minlength="5" 
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Endereço"
+            autocomplete="off"
+            minlength="5"
+            maxlength="120"
             required
+            ngModel
+            name="endereco"
+            #inputEndereco="ngModel"
+          />
+          <small *ngIf="inputEndereco.valid" class="form-text text-success"
+            >Endereço Válido</small
           >
-          <small class="form-text text-danger">Endereço inválido</small>
+          <small
+            *ngIf="inputEndereco.invalid && inputEndereco.touched"
+            class="form-text text-danger"
+            >Endereço Inválido</small
+          >
         </div>
 
         <div class="form-group col-md-2">
-          <input 
-            type="text" 
-            class="form-control is-valid" 
-            placeholder="Número" 
-            autocomplete="off" 
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Número"
+            autocomplete="off"
             minlength="1"
             required
+            ngModel
+            name="numero"
+            #inputNumero="ngModel"
+          />
+          <small *ngIf="inputNumero.valid" class="form-text text-success"
+            >Endereço Válido</small
           >
-          <small class="form-text text-success">Ok</small>
+          <small
+            *ngIf="inputNumero.invalid && inputNumero.touched"
+            class="form-text text-danger"
+            >Endereço Inválido</small
+          >
         </div>
 
         <div class="form-group col-md-4">
-          <input 
-            type="text" 
-            class="form-control" 
-            placeholder="Complemento" 
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Complemento"
             autocomplete="off"
-          >
+            ngModel
+            name="complemento"
+          />
         </div>
-
       </div>
       <br />
 
@@ -108,24 +141,35 @@
       <hr />
 
       <div class="form-row">
-          
         <div class="form-group col-md-3">
-          <select 
-            class="form-control is-invalid"
+          <select
+            class="form-control"
+            ngModel
+            name="formaPagamento"
+            required
+            #selectFormaPagamento="ngModel"
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small class="form-text text-danger">Forma de pagamento inválida</small>
+          <small
+            *ngIf="selectFormaPagamento.valid"
+            class="form-text text-success"
+            >Endereço Válido</small
+          >
+          <small
+            *ngIf="selectFormaPagamento.invalid && selectFormaPagamento.touched"
+            class="form-text text-danger"
+            >Endereço Inválido</small
+          >
         </div>
       </div>
 
       <hr />
-      <button 
-        type="button" 
-        class="btn btn-primary btn-lg"
-      >Cofirmar compra</button>
+      <button type="submit" class="btn btn-primary btn-lg">
+        Confirmar compra
+      </button>
     </form>
   </div>
 </div>
