feat: Feedback visual para conclusão bem sucedida do cadastro e perfil

--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="ordem-compra">
+  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
     <form novalidate #formulario="ngForm" (ngSubmit)="confirmarCompra()">
       <h5>Sua Compra</h5>
       <hr />
@@ -171,5 +171,11 @@
         Confirmar compra
       </button>
     </form>
+  </div>
+
+  <div class="ordem-compra" *ngIf="idPedidoCompra">
+    <app-ordem-compra-sucesso
+      [idPedidoCompra]="idPedidoCompra"
+    ></app-ordem-compra-sucesso>
   </div>
 </div>
