feat: Desabilitar o botão caso o formulário esteja invalido

--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -167,7 +167,11 @@
       </div>
 
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg">
+      <button
+        type="submit"
+        class="btn btn-primary btn-lg"
+        [disabled]="formulario.invalid"
+      >
         Confirmar compra
       </button>
     </form>
