feat: Adiciona oferta ao carrinho e rederiza na página de carrinho

--- a/_projetos/app2_passaroUrbano/src/app/topo/topo.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/topo/topo.component.html
@@ -20,7 +20,7 @@
           </li>
         </ul>
       </div>
-      <a routerLink=""><img src="/assets/carrinho.png" /></a>
+      <a routerLink="/ordem-compra"><img src="/assets/carrinho.png" /></a>
     </div>
   </nav>
 
