feat: Salva pedido no banco de dados e limpa array após confirmação

--- a/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/oferta/oferta.component.html
@@ -33,6 +33,7 @@
         <div class="row">
           <div class="col text-center">
             <button
+              id="liveToastBtn"
               type="button"
               class="btn btn-warning btn-lg"
               (click)="adicionarItemCarrinho()"
@@ -76,3 +77,4 @@
     </div>
   </div>
 </div>
+<app-toast-pedido-sucesso></app-toast-pedido-sucesso>
