--- a/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
+++ b/_projetos/app2_passaroUrbano/src/app/ordem-compra/ordem-compra.component.html
@@ -154,7 +154,7 @@
       <div class="form-row">
         <div class="form-group col-md-3">
           <select class="form-control" formControlName="formaPagamento">
-            <option selected disabled>Selecione uma opção</option>
+            <option value="" selected disabled>Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
